--- a/src/routes/Navigation.css
+++ b/src/routes/Navigation.css
@@ -1,9 +1,24 @@
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+.nav_menu {
+  display: flex;
+  overflow: hidden;
+  background-color: #333;
 }
 
-li {
-  display: inline;
+.nav_menu a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.nav_menu a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.nav_menu a.active {
+  background-color: #4caf50;
+  color: white;
 }
