--- a/src/routes/Detail.css
+++ b/src/routes/Detail.css
@@ -1,8 +1,8 @@
-.about_data {
+.detail_container {
   width: 100%;
   background-color: white;
   margin-bottom: 70px;
-  display: relative;
+  display: flex;
   align-items: flex-start;
   justify-content: space-between;
   font-weight: 300;
@@ -11,4 +11,8 @@
   color: #adaeb9;
   box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
     0 8px 16px -8px rgba(0, 0, 0, 0.3), 0 -6px 16px -6px rgba(0, 0, 0, 0.025);
+}
+
+.detail_contents {
+  margin-left: 30px;
 }
